css/style.css
/******************************************
/* SETUP
/*******************************************/

* {

  box-sizing: border-box; 
}


/******************************************
/* BASE STYLES
/*******************************************/

body {
  color: #f0efef;
  color: rgb(0,43,69);
  font-size: 14px;
  line-height: 1.4;
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
  font-weight: 300;
}

a {
  text-decoration: none;
}


/******************************************
/* LAYOUT
/*******************************************/

h3 {
  color: #033048;
  font-size: 20px;
  font-size: 1.57em;
  font-weight: 700;
  margin-bottom: 30px;
}


.logo {
  font-size: 40px;
  font-weight: 900;
}

.menu {
  display: none;
}

header.page-header { /* selects header elements that have the class name of page-header */
  /*padding-top: 32px;*/
  background: url('../images/bg.jpg') no-repeat top center #fff;
  background-size: cover;
  min-height:500px;
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 20px 75px;
  justify-content: space-between;
  align-items: flex-start;
}

header nav, header div, header .logo{
  width:40%;
}

header nav {
  display: flex;
  justify-content: flex-end;
}

header nav ul {
  display: flex;
}

header nav ul li a {
  display: block;
  padding: 10px 20px;
  color: white;
  font-weight: 600
}
header .logo {
  color: #fff;
}

header h2 {
  font-size: 36px;
  font-size: 2.57em;
  color: #5FDEA1;
  font-weight: 900;
  text-shadow: black .25px .25px .25px
}

.button {
  border-radius: 5px;
  font-weight: 900;
  padding: 12px 0;
  width: 280px;
  font-size: 14px;
  text-align: center;
  display: block;
  color:#fff;
}

.primary {
  background: rgba(16,204,114,1);
  margin-top:25px;
}

.secondary {
  background: rgba(115,176,248,1);
  margin: 0 auto;
}

#services {
  padding-top: 50px;
  display: flex;
  justify-content: space-around;
  background:rgba(255,255,255,.9);
}

#services div {
  width: 25%;
  text-align: center;
}

#testimonial {
  padding: 40px 0 70px;
  color: rgb(142,149,146);
}

blockquote {
  font-size: 18px;
  font-weight: 300;
  font-style: italic;
  text-align: center;
  width: auto;
  margin: 0 auto;
}

blockquote cite {
  font-weight: 500;
  font-size: 14px;
  display: block;
  margin:5px;
  font-style: normal;
}

aside {
  padding: 30px;
  text-align: center
}

footer {
  padding: 35px 0 45px;
  background: rgba(242,244,246, 1);
  text-align: center;
}

footer .logo {
  color: rgb(113,122,128);
  margin-bottom: 10px
}
footer ul li {
  display: inline-block;
  list-style: none;
  margin: 0 26px 75px;
}

footer p {
  font-size: 9px;
  color: rgb(113,122,128);
  font-weight: 700;
}


/*** BLOG PAGE ***/
body.blog section.left, body.blog aside {
  padding-top: 0px;
}
body.blog .page-header {
  min-height:125px;
  /*padding: 0px;*/
  align-items: center;
}

body.blog .container { /* targets elements with class of container, that are descendants of a <body class="blog"> element */
  display: grid;
  grid-row-gap: 30px;
  min-height: 100vh;
  grid-template-columns: 25% 50% 25%;
  grid-template-rows: minmax(100px, auto) minmax(100px, auto) minmax(75px, auto);
  grid-template-areas: "a a a"
                       "b c d"
                       "e e e"
}

body.blog .container header{
  grid-area: a;
}
body.blog .container article img{
  width: 100%;
}
body.blog article header p {
  padding: 0;
  margin: 0;
  font-weight: 300;
  font-size: 12px;
  font-style: italic;
  color: rgb(142,149,146)
}

body.blog article header h1 {
  /*margin: 3px 0;*/
}
body.blog .container section.left { /* targets <section class="left"> elements that are descendants of an element with a class of 'container' */
  grid-area: b;
  justify-self: center;
}

body.blog section.left nav ul {
  padding: 0;
  margin: 0;
}
body.blog section.left nav {
  margin-bottom: 25px;
}
body.blog section.left nav h3 {
  margin-bottom: 10px;
  /*margin-top: 0px;*/
}

body.blog section.left nav ul a {
  color: rgb(113,122,128);
}

body.blog section.left nav ul a:hover {
  text-decoration: underline;
}

body.blog .container section.main {
  grid-area: c;
}

body.blog .container aside.right {
  grid-area: d;
}
body.blog .container footer{
  grid-area: e;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0px;
}

body.blog .container footer h4 {
  margin-top: 0px;
}

body.blog aside {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

body.blog aside img {
  width: 100%;
/*  max-height:200px;*/
  margin-bottom: 20px;
}
/************************* RESPONSIVE LANDING ******************/

@media screen and (max-width: 780px) {
  .main-container {
    display: grid;
    grid-template-rows: minmax(auto,auto) minmax(auto,auto) minmax(auto,auto) minmax(auto,auto) minmax(auto,auto);
    grid-template-areas:  "a"
                          "b"
                          "c"
                          "d"
                          "e";
    grid-template-columns: 100%;
  }

    .menu {
    display: flex;
    color: white;
  }


    .slogan {
    display: none;
  }

  header.page-header {
    display: flex;
    flex-direction: row;
    grid-area: a;
/*    min-height: 50px;*/
    min-height: 3.125em;
    background: url('../images/bg.jpg') no-repeat top center #fff;
    background-size: cover;
  }

  body.blog .container {
    min-height: 125px;
    justify-content: space-around;
  }

  header div {
    padding-top: 0px;
    display: flex;
    justify-content: space-between;
    flex-wrap: nowrap;
  }

  .page-header nav{
    overflow: hidden;
    height: 0;
    transition: 1s all;
    width: 100%;
    text-align: center;
  } /**set up menu nav**/

    nav.open {
    height: 300px;
  }

  header ul {
    flex-direction: column;
  } /**Make the nav vertical**/

  nav ul li {
    padding: 10px 0;
    transition:.5s all;
  }

  #services {
    flex-direction: column;
    grid-area: b;
  }

  #services div {
    display: block;
    width: auto;
  }

  aside {
    display: flex;
    grid-area: c;
    flex-wrap: wrap;
  }

  #testemonial {
    display: flex;
    grid-area: d;
  }

  footer {
    display: block;
    grid-area: e;
    text-align: center;
  }

  /************************* RESPONSIVE BLOG PAGE ******************/

@media screen and (max-width: 780px) {
body.blog .container  {
    display: grid;
    grid-template-rows: minmax(auto,auto) minmax(auto,auto) minmax(auto,auto) minmax(auto,auto) minmax(auto,auto);
    grid-template-areas:  "a"
                          "b"
                          "c"
                          "d"
                          "e";
    grid-template-columns: 100%;
  }


body.blog .container section.main {
    grid-area: b;
/*    margin: 16px;*/
    margin: 1em;
/*    padding: 16px;*/
    padding: 1em;

}

body.blog .container aside.right {
    grid-area: c;
}

body.blog .container section.left {
    grid-area: d;
    justify-self: center;
}

body.blog section.left nav {
    display: inline-block;
}

